Готовая работа, правки после ревью

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       <h2 class="header-title">закрывающий тег</h2>
     </header>
     <main class="main">
-      <section class="card">
-        <h3 class="main-title">
+      <article class="card">
+        <h2 class="main-title">
           Фритрек и нулевой спринт: Подготовка к работе
-        </h3>
+        </h2 >
         <div class="img-wrapper">
           <img
             class="card-img"
@@ -47,6 +47,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -77,9 +78,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">1 спринт: Я — чистый лист</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">1 спринт: Я — чистый лист</h2 >
         <div class="img-wrapper">
           <img
             class="card-img grayfilter"
@@ -107,6 +108,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -137,9 +139,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">1 спринт: А если не получится?</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">1 спринт: А если не получится?</h2 >
         <div class="img-wrapper">
           <img
             class="card-img saturate"
@@ -165,6 +167,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -195,9 +198,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">2 спринт: Погоня за идеалом</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">2 спринт: Погоня за идеалом</h2 >
         <div class="img-wrapper">
           <img
             class="card-img hue-rotate"
@@ -225,6 +228,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -255,9 +259,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">2 спринт: О тех, кто рядом</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">2 спринт: О тех, кто рядом</h2 >
         <div class="img-wrapper">
           <img
             class="card-img negative"
@@ -286,6 +290,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -316,9 +321,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">3 спринт: Обходные стратегии</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">3 спринт: Обходные стратегии</h2 >
         <div class="img-wrapper">
           <img
             class="card-img sepia"
@@ -344,6 +349,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -374,9 +380,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">3 спринт: Когда опускаются руки</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">3 спринт: Когда опускаются руки</h2 >
         <div class="img-wrapper">
           <img
             class="card-img blur"
@@ -404,6 +410,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -434,9 +441,9 @@
             </button>
           </div>
         </div>
-      </section>
-      <section class="card">
-        <h3 class="main-title">«Сейчас я здесь»</h3>
+      </article>
+      <article class="card">
+        <h2 class="main-title">«Сейчас я здесь»</h2 >
         <div class="img-wrapper">
           <img
             class="card-img multi"
@@ -468,6 +475,7 @@
                 viewBox="0 0 39 36"
                 fill="none"
                 xmlns="http://www.w3.org/2000/svg"
+                aria-hidden="true"
               >
                 <g class="heart">
                   <path
@@ -498,21 +506,21 @@
             </button>
           </div>
         </div>
-      </section>
+      </article>
       <button
         class="button button-floppy"
         type="button"
         onclick="window['dialog-save'].showModal()"
         aria-controls="dialog-save"
       >
-        <svg width="21" height="21" viewBox="0 0 39 39">
-          <use href="#floppy"></use>
+        <svg width="21" height="21" viewBox="0 0 39 39" aria-hidden="true">
+          <use href="/svg/floppy.svg#floppy"></use>
         </svg>
         <span class="button__text">Сохранить на память</span>
       </button>
       <dialog id="dialog-save" class="popup-save">
-        <svg width="39" height="39" viewBox="0 0 39 39">
-          <use href="#floppy"></use>
+        <svg width="39" height="39" viewBox="0 0 39 39" aria-hidden="true">
+          <use href="/svg/floppy.svg#floppy"></use>
         </svg>
         <p>Вставьте дискету, чтобы продолжить</p>
         <button
@@ -524,14 +532,6 @@
         </button>
       </dialog>
     </main>
-    <svg xmlns="http://www.w3.org/2000/svg" width="39" height="39" fill="none">
-      <symbol id="floppy">
-        <path
-          fill="#fff"
-          d="M0 0h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zm0 3h3v3H0zM33 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3h-3V0zm-3 0v3H9V0zM9 0v3H6V0zM6 0v3H3V0zm30 3v3h-3V3zM9 6v3H6V6zm0-3v3H6V3zm0 6v3H6V9zm21-3v3h-3V6zm0-3v3h-3V3zm0 6v3h-3V9zm-6-3v3h-3V6zm0-3v3h-3V3zm0 6v3h-3V9zm6 3v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3H9v-3zm-3 0v3H6v-3zm24 9v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3H9v-3zm-3 0v3H6v-3zm24 3v3h-3v-3zM9 24v3H6v-3zm24 3v3h-3v-3zM9 27v3H6v-3zm24 3v3h-3v-3zM9 30v3H6v-3zm0 3v3H6v-3zm24 0v3h-3v-3zm3 3v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3h-3v-3zm-3 0v3H9v-3zm-3 0v3H6v-3zm-3 0v3H3v-3zm33 3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3v-3h3zm0-3h-3V9h3zm0-3h-3V6h3z"
-        />
-      </symbol>
-    </svg>
     <script src="./scripts/like.js"></script>
   </body>
 </html>
